<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    xmlns:android="http://schemas.android.com/apk/res/android" />
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/gray"
        android:layoutDirection="ltr"
        >

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="onClickDrawerItems"
            android:padding="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_close" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="70sp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:srcCompat="@drawable/ic_shopping_dark" />

        <TextView
            android:id="@+id/tv_header_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="میهمان عزیز"
            android:textColor="@color/colorPrimary"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.13" />

        <TextView
            android:id="@+id/tv_header_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="خوش آمدید"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_name"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_root"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:id="@+id/drawer_item__home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_padding_item_drawer"
            android:gravity="right"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:background="@drawable/selector_drawer_item"
            android:onClick="onClickDrawerItems">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/iv_margin_right_drawer_item"
                app:srcCompat="@drawable/ic_home_drawer_item" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"
                android:text="@string/home_drawer_item"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/drawer_item__category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_padding_item_drawer"
            android:gravity="right"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:background="@drawable/selector_drawer_item"
            android:onClick="onClickDrawerItems">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/iv_margin_right_drawer_item"
                app:srcCompat="@drawable/ic_category_drawer_item" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:text="@string/category_drawer_item" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_seprator_line"/>

        <RelativeLayout
            android:id="@+id/drawer_item__basket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_padding_item_drawer"
            android:layoutDirection="rtl"
            android:background="@drawable/selector_drawer_item"
            android:onClick="onClickDrawerItems">

            <ImageView
                android:id="@+id/iv_basket_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/iv_margin_right_drawer_item"
                app:srcCompat="@drawable/ic_basket_drawer_item"
                android:layout_alignParentRight="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/iv_basket_item"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/tv_margin_right_drawer_item"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
            android:text="@string/buy_basket_drawer_item" />

            <TextView
                android:id="@+id/tv_buy_basket_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_basket_item"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone"/>
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_seprator_line"/>

        <LinearLayout
            android:id="@+id/drawer_item_like"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_drawer_item"
            android:gravity="right"
            android:layoutDirection="rtl"
            android:onClick="onClickDrawerItems"
            android:orientation="horizontal"
            android:padding="@dimen/layout_padding_item_drawer">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/ic_like_drawer_item" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:text="@string/like_drawer_item"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/drawer_item_buy_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_drawer_item"
            android:gravity="right"
            android:layoutDirection="rtl"
            android:onClick="onClickDrawerItems"
            android:orientation="horizontal"
            android:padding="@dimen/layout_padding_item_drawer">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/ic_buylist_drawer_item" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:text="@string/buy_list_drawer_item"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/drawer_item__account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_padding_item_drawer"
            android:gravity="right"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:background="@drawable/selector_drawer_item"
            android:onClick="onClickDrawerItems">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/iv_margin_right_drawer_item"
                app:srcCompat="@drawable/ic_user_drawer_item" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/tv_margin_right_drawer_item"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:text="@string/account_drawer_item" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_seprator_line"/>

        <LinearLayout
            android:id="@+id/drawer_item__login_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_padding_item_drawer"
            android:gravity="right"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:background="@drawable/selector_drawer_item"
            android:onClick="onClickDrawerItems">

            <ImageView
                android:id="@+id/iv_login_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/iv_margin_right_drawer_item"
                app:srcCompat="@drawable/ic_logout_drawer_item" />

            <TextView
                android:id="@+id/tv_login_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/tv_margin_right_drawer_item"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
</ScrollView>